--- a/gamma/index.html
+++ b/gamma/index.html
@@ -481,7 +481,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading51">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse51" aria-expanded="false" aria-controls="collapse51">
-								<h5>TBA
+								<h5>Moment maps in multisymplectic geometry
 								<br>
 								Leyli Mammadova (University of Edinburgh) &#8213; 05/12/2024, 15:00</h5>
 							</button>
@@ -490,7 +490,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								In this talk, I will provide a gentle introduction to some topics in multisymplectic geometry, such as the L-infinity algebra of observables, homotopy moment maps, and weak homotopy moment maps. We will compare the two moment maps and investigate conditions under which the existence of a weak homotopy moment map implies the existence of a homotopy moment map. This part of the talk is based on joint work with Leonid Ryvkin.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
