--- a/gamma/index.html
+++ b/gamma/index.html
@@ -472,9 +472,9 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Élie Cartan's approach to differential geometry emerged as a continuation of Felix Klein's Erlangen program. The general idea of Cartan geometry is to describe curved analogues of Klein geometries, i.e., homogeneous spaces \(G/H\), where \(G\) is a Lie group and \(H\) its closed Lie subgroup. The merit of this approach is that it develops a suitable differential calculus for studying geometric structures through the algebraic apparatus of Lie theory. As a result, Cartan geometry provides a group-theoretic description of many classical geometric structures (Riemannian, conformal, projective to name a few), making central the notion of a symmetry. This talk aims to give a gentle introduction to the modern formulation of Cartan geometry and showcase various applications of the theory.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/a4gwbU6MF4w' target="_blank">Leyli Mammadova --- Moment maps in multisymplectic geometry</a> -->
 							</div>
 						</div>
 					</div>
@@ -492,7 +492,7 @@
 								<p class="text-justify">
   								In this talk, I will provide a gentle introduction to some topics in multisymplectic geometry, such as the L-infinity algebra of observables, homotopy moment maps, and weak homotopy moment maps. We will compare the two moment maps and investigate conditions under which the existence of a weak homotopy moment map implies the existence of a homotopy moment map. This part of the talk is based on joint work with Leonid Ryvkin.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/a4gwbU6MF4w' target="_blank">Leyli Mammadova --- Moment maps in multisymplectic geometry</a>
 							</div>
 						</div>
 					</div>
