--- a/gamma/index.html
+++ b/gamma/index.html
@@ -492,7 +492,8 @@
 								<p class="text-justify">
   								In this talk, I will provide a gentle introduction to some topics in multisymplectic geometry, such as the L-infinity algebra of observables, homotopy moment maps, and weak homotopy moment maps. We will compare the two moment maps and investigate conditions under which the existence of a weak homotopy moment map implies the existence of a homotopy moment map. This part of the talk is based on joint work with Leonid Ryvkin.
 								</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/a4gwbU6MF4w' target="_blank">Leyli Mammadova --- Moment maps in multisymplectic geometry</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/a4gwbU6MF4w' target="_blank">Leyli Mammadova --- Moment maps in multisymplectic geometry</a><br>
+								<strong>Link to the slides: </strong><a href='./pdf/Mammadova_2024-12.pdf' target="_blank">Slides --- Moment maps in multisymplectic geometry</a>
 							</div>
 						</div>
 					</div>
