--- a/gamma/index.html
+++ b/gamma/index.html
@@ -474,7 +474,7 @@
 								<p class="text-justify">
   								Élie Cartan's approach to differential geometry emerged as a continuation of Felix Klein's Erlangen program. The general idea of Cartan geometry is to describe curved analogues of Klein geometries, i.e., homogeneous spaces \(G/H\), where \(G\) is a Lie group and \(H\) its closed Lie subgroup. The merit of this approach is that it develops a suitable differential calculus for studying geometric structures through the algebraic apparatus of Lie theory. As a result, Cartan geometry provides a group-theoretic description of many classical geometric structures (Riemannian, conformal, projective to name a few), making central the notion of a symmetry. This talk aims to give a gentle introduction to the modern formulation of Cartan geometry and showcase various applications of the theory.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/a4gwbU6MF4w' target="_blank">Leyli Mammadova --- Moment maps in multisymplectic geometry</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/HzkwVzR8L3Y' target="_blank">Tymon Frelik --- Introduction to Cartan geometry</a>
 							</div>
 						</div>
 					</div>
