--- a/gamma/index.html
+++ b/gamma/index.html
@@ -255,9 +255,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading63">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse63" aria-expanded="false" aria-controls="collapse63">
-								<h5>TBA
+								<h5>On higher Dirac structures
 								<br>
-								TBA &#8213; 10/04/2025, 15:00</h5>
+								Roberto Rubio (Universitat Autònoma de Barcelona) &#8213; 10/04/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse63" class="accordion-collapse collapse" aria-labelledby="heading63" data-bs-parent="#accordion-summer25">
@@ -454,7 +454,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								This talk is general introduction to the structure of Courant algebroids, which are a generalization of Lie algebroids, arising naturally in the study of Poisson geometry. These structures are defined by a vector bundle equipped with a skew-symmetric bracket, a non-degenerate symmetric pairing, and an anchor map, all satisfying a set of compatibility conditions. In this talk, I will introduce the fundamental properties of Courant algebroids, emphasizing their geometric and algebraic roles. Key examples, such as the standard Courant algebroid over a smooth manifold and its connection to Dirac structures, will illustrate their versatility. I will also explore several applications, emphasizing their role in Poisson geometry.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
