--- a/gamma/index.html
+++ b/gamma/index.html
@@ -456,7 +456,7 @@
 								<p class="text-justify">
   								This talk is general introduction to the structure of Courant algebroids, which are a generalization of Lie algebroids, arising naturally in the study of Poisson geometry. These structures are defined by a vector bundle equipped with a skew-symmetric bracket, a non-degenerate symmetric pairing, and an anchor map, all satisfying a set of compatibility conditions. In this talk, I will introduce the fundamental properties of Courant algebroids, emphasizing their geometric and algebraic roles. Key examples, such as the standard Courant algebroid over a smooth manifold and its connection to Dirac structures, will illustrate their versatility. I will also explore several applications, emphasizing their role in Poisson geometry.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/FP9rspqOl1M' target="_blank">Julia Lange --- Introduction to Courant algebroids</a>
 							</div>
 						</div>
 					</div>
