--- a/gamma/index.html
+++ b/gamma/index.html
@@ -436,7 +436,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								This talk serves as a continuation of the previous discussion on \(k\)-contact geometry and explores its application to the so-called Lie systems. These systems are a particular type of ordinary differential equations whose general solution can be expressed as a function of particular solutions and a set of constants, known as a superposition rule. Building on concepts from the previous talk, every Lie system is associated with a finite-dimensional Lie algebra spanned by vector fields, which can be interpreted as \(\boldsymbol{\eta}\)-Hamiltonian vector fields related to the \(k\)-contact structure. This presentation will introduce new methods for constructing \(k\)-contact Lie systems, particularly those whose \(\boldsymbol{\eta}\)-Hamiltonian \(k\)-functions are not first integrals of the Reeb vector fields associated with the chosen \(k\)-contact strucutre. Additionally, I will discuss Lie systems of partial differential equations (PDEs) and analyse them using \(k\)-contact geometry. 
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
