--- a/gamma/index.html
+++ b/gamma/index.html
@@ -162,7 +162,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse68" aria-expanded="false" aria-controls="collapse68">
 								<h5>TBA
 								<br>
-								TBA &#8213; 29/05/2025, 15:00</h5>
+								Ian Anderson (Utah State University) &#8213; 29/05/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse68" class="accordion-collapse collapse" aria-labelledby="heading68" data-bs-parent="#accordion-summer25">
@@ -200,7 +200,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse66" aria-expanded="false" aria-controls="collapse66">
 								<h5>TBA
 								<br>
-								TBA &#8213; 15/05/2025, 15:00</h5>
+								Ian Anderson (Utah State University) &#8213; 15/05/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse66" class="accordion-collapse collapse" aria-labelledby="heading66" data-bs-parent="#accordion-summer25">
@@ -219,7 +219,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse65" aria-expanded="false" aria-controls="collapse65">
 								<h5>TBA
 								<br>
-								TBA &#8213; 08/05/2025, 15:00</h5>
+								Jakub Vašíček (Silesian University in Opava) &#8213; 08/05/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse65" class="accordion-collapse collapse" aria-labelledby="heading65" data-bs-parent="#accordion-summer25">
@@ -238,7 +238,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse64" aria-expanded="false" aria-controls="collapse64">
 								<h5>TBA
 								<br>
-								TBA &#8213; 24/04/2025, 15:00</h5>
+								Artur Sergyeyev (Silesian University in Opava) &#8213; 24/04/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse64" class="accordion-collapse collapse" aria-labelledby="heading64" data-bs-parent="#accordion-summer25">
