--- a/gamma/index.html
+++ b/gamma/index.html
@@ -122,9 +122,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading70">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse70" aria-expanded="false" aria-controls="collapse70">
-								<h5>TBA
+								<h5>Students' Practicing Defense Talks Day
 								<br>
-								Tymon Frelik (University of Warsaw)<br>Michalina Borczynska (University of Warsaw) &#8213; 12/06/2025, 15:00</h5>
+								Tymon Frelik (University of Warsaw)<br>Michalina Borczynska (University of Warsaw)<br>Małgorzata Flis (University of Warsaw) &#8213; 12/06/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse70" class="accordion-collapse collapse" aria-labelledby="heading70" data-bs-parent="#accordion-summer25">
@@ -143,7 +143,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse69" aria-expanded="false" aria-controls="collapse69">
 								<h5>TBA
 								<br>
-								TBA &#8213; 05/06/2025, 15:00</h5>
+								Michalina Borczyńska (University of Warsaw) &#8213; 05/06/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse69" class="accordion-collapse collapse" aria-labelledby="heading69" data-bs-parent="#accordion-summer25">
@@ -409,7 +409,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading55">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse55" aria-expanded="false" aria-controls="collapse55">
-								<h5>Supersymplectic Marsden-Weinstein reductions
+								<h5>Reductions of super Poisson manifolds
 								<br>
 								Adam Maskalaniec (University of Warsaw) &#8213; 16/01/2025, 15:00</h5>
 							</button>
@@ -418,7 +418,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Supergeometry is a branch of mathematics that arose from physical supersymmetric field theories. To describe fermionic degrees of freedom, supersymmetric field theories and supersymmetric quantum mechanics require the extension of differential geometry that includes both commuting and anticommuting variables. The symplectic and Poisson manifolds provide the framework for the geometric approach to dynamical systems in classical mechanics. If such a system defined on a manifold \(M\) admits a Hamiltonian symmetry represented by an action of a Lie group \(G\), then one can reduce the dynamics from \(M\) to a new Hamiltonian system on the quotient manifold \(M/G\). This procedure is known as the Marsden-Weinstein reduction. In the first part of my talk, I will introduce the formalism of supergeometry and outline the main difficulties that arise in extending Poisson structures to supergeometry. Then, I will analyse the Marsden-Weinsten reduction of super Poisson manifolds and present a generalisation of the Marsden-Weinstein reduction of super Poisson manifolds to the case of the quotient by an arbitrary foliation.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
@@ -438,7 +438,7 @@
 								<p class="text-justify">
   								This talk serves as a continuation of the previous discussion on \(k\)-contact geometry and explores its application to the so-called Lie systems. These systems are a particular type of ordinary differential equations whose general solution can be expressed as a function of particular solutions and a set of constants, known as a superposition rule. Building on concepts from the previous talk, every Lie system is associated with a finite-dimensional Lie algebra spanned by vector fields, which can be interpreted as \(\boldsymbol{\eta}\)-Hamiltonian vector fields related to the \(k\)-contact structure. This presentation will introduce new methods for constructing \(k\)-contact Lie systems, particularly those whose \(\boldsymbol{\eta}\)-Hamiltonian \(k\)-functions are not first integrals of the Reeb vector fields associated with the chosen \(k\)-contact strucutre. Additionally, I will discuss Lie systems of partial differential equations (PDEs) and analyse them using \(k\)-contact geometry. 
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/ukRMcYlUbSo' target="_blank">Tomasz Sobczak --- On k-contact Lie systems: theory and applications</a>
 							</div>
 						</div>
 					</div>
