--- a/gamma/index.html
+++ b/gamma/index.html
@@ -276,7 +276,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse62" aria-expanded="false" aria-controls="collapse62">
 								<h5>TBA
 								<br>
-								TBA &#8213; 03/04/2025, 15:00</h5>
+								Henrique Bursztyn (Instituto Nacional de Matematica Pura e Aplicada, Brazil) &#8213; 03/04/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse62" class="accordion-collapse collapse" aria-labelledby="heading62" data-bs-parent="#accordion-summer25">
