--- a/gamma/index.html
+++ b/gamma/index.html
@@ -391,7 +391,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading56">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse56" aria-expanded="false" aria-controls="collapse56">
-								<h5>TBA
+								<h5>\(k\)-symplectic geometry
 								<br>
 								Silvia Vilariño (University of Zaragoza) &#8213; 23/01/2025, 15:00</h5>
 							</button>
@@ -400,7 +400,16 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								The Newtonian formalism offers a very simple way to understand mechanical systems, but it has the difficult that it is necessary to measure and calculate the three components of the position and velocity of each particle that makes up the system.
+  								<br>
+								Later, with the development of Lagrangian mechanics (1788) and Hamiltonian mechanics (1833) and their generalization to symplectic mechanics, the usefulness of the geometrical description of classical mechanics becomes clear. As we all know, this description of autonomous systems is carried out by means of the so-called symplectic manifolds.
+								<br>
+								When we make the leap from classical mechanics to classical field theory, the use of differential geometry has been a tool of great interest. At the end of the '60s and the beginning of the '70s of the past century, there are some attempts to develop a convenient geometric framework to study classical field theories. 
+								The first difficulty in this area is the generalization of the notion of symplectic form.  There are different geometrical settings that allow describing classical field theory: \(k\)-symplectic formulation, \(k\)-cosymplectic formulation, multisymplectic , \(k\)-contact, etc.  
+								<br>
+								The aim of this talk is to present the simplest one geometric description of classical field theories: the \(k\)-symplectic framework. The notion of \(k\)-symplectic manifolds will be introduced and these geometric structures will be analyzed. We will describe a Darboux' theorem for these structures and we will analyze certain types of submanifolds, for instance, \(k\)-symplectic orthogonal subspaces or Lagrangian  of \(k\)-symplectic manifolds such as orthogonal subspaces or Lagrangian submanifolds. 
+								<br>
+								Finally we will comment some interesting applications of the \(k\)-symplectic structures.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
@@ -438,7 +447,7 @@
 								<p class="text-justify">
   								This talk serves as a continuation of the previous discussion on \(k\)-contact geometry and explores its application to the so-called Lie systems. These systems are a particular type of ordinary differential equations whose general solution can be expressed as a function of particular solutions and a set of constants, known as a superposition rule. Building on concepts from the previous talk, every Lie system is associated with a finite-dimensional Lie algebra spanned by vector fields, which can be interpreted as \(\boldsymbol{\eta}\)-Hamiltonian vector fields related to the \(k\)-contact structure. This presentation will introduce new methods for constructing \(k\)-contact Lie systems, particularly those whose \(\boldsymbol{\eta}\)-Hamiltonian \(k\)-functions are not first integrals of the Reeb vector fields associated with the chosen \(k\)-contact strucutre. Additionally, I will discuss Lie systems of partial differential equations (PDEs) and analyse them using \(k\)-contact geometry. 
 								</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/ukRMcYlUbSo' target="_blank">Tomasz Sobczak --- On k-contact Lie systems: theory and applications</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/ukRMcYlUbSo' target="_blank">Tomasz Sobczak --- On \(k\)-contact Lie systems: theory and applications</a>
 							</div>
 						</div>
 					</div>
@@ -586,7 +595,7 @@
 								<p class="text-justify">
   								Building on our previous discussion, I will introduce various extensions and new research topics in \(k\)-contact geometry. I will examine certain compact \(k\)-contact manifolds and explore a potential extension of the Weinstein conjecture to this setting. Additionally, I will present a new form of Hamilton-De Donder-Weyl equations for \(k\)-contact manifolds without polarization and describe a theory of characteristics for Lie symmetries of first-order differential equations. Our findings will be illustrated with examples such as the Dirac equation and the Hamilton-Jacobi equation.
 								</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/7WlF9cQYq_c' target="_blank">Tomasz Sobczak --- New approaches to k-contact geometry II</a>
+								<strong>Link to the video: </strong><a href='https://youtu.be/7WlF9cQYq_c' target="_blank">Tomasz Sobczak --- New approaches to \(k\)-contact geometry II</a>
 							</div>
 						</div>
 					</div>
