--- a/gamma/index.html
+++ b/gamma/index.html
@@ -429,7 +429,7 @@
 								<p class="text-justify">
   								Supergeometry is a branch of mathematics that arose from physical supersymmetric field theories. To describe fermionic degrees of freedom, supersymmetric field theories and supersymmetric quantum mechanics require the extension of differential geometry that includes both commuting and anticommuting variables. The symplectic and Poisson manifolds provide the framework for the geometric approach to dynamical systems in classical mechanics. If such a system defined on a manifold \(M\) admits a Hamiltonian symmetry represented by an action of a Lie group \(G\), then one can reduce the dynamics from \(M\) to a new Hamiltonian system on the quotient manifold \(M/G\). This procedure is known as the Marsden-Weinstein reduction. In the first part of my talk, I will introduce the formalism of supergeometry and outline the main difficulties that arise in extending Poisson structures to supergeometry. Then, I will analyse the Marsden-Weinsten reduction of super Poisson manifolds and present a generalisation of the Marsden-Weinstein reduction of super Poisson manifolds to the case of the quotient by an arbitrary foliation.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/BEOf_4igEDo' target="_blank">Adam Maskalaniec --- Reductions of super Poisson manifolds</a>
 							</div>
 						</div>
 					</div>
