--- a/gamma/index.html
+++ b/gamma/index.html
@@ -295,7 +295,7 @@
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse61" aria-expanded="false" aria-controls="collapse61">
 								<h5>TBA
 								<br>
-								TBA &#8213; 27/03/2025, 15:00</h5>
+								Vera Vertesi (University of Vienna) &#8213; 27/03/2025, 15:00</h5>
 							</button>
 						</h3>
 						<div id="collapse61" class="accordion-collapse collapse" aria-labelledby="heading61" data-bs-parent="#accordion-summer25">
