--- a/gamma/index.html
+++ b/gamma/index.html
@@ -411,7 +411,7 @@
 								<br>
 								Finally we will comment some interesting applications of the \(k\)-symplectic structures.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/oC8bsCmwevo' target="_blank">Silvia Vilariño --- \(k\)-symplectic geometry</a>
 							</div>
 						</div>
 					</div>
