--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 					<li class='mb-2'>J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>Preprint.</em> <a href="https://arxiv.org/abs/2312.09192" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2312.09192</span></a> <a href="https://doi.org/10.3934/math.20241359" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.3934/math.20241359</span></a></li>
 
-					<li class='mb-2'>L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>Preprint.</em> <a href="https://arxiv.org/abs/2311.15035" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2311.15035</span></a></li>
+					<li class='mb-2'>L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>J. Nonlinear Sci.</em> <strong>35</strong>(42):1-54<a href="https://arxiv.org/abs/2311.15035" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2311.15035</span></a> <a href="https://doi.org/10.1007/s00332-025-10135-w" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s00332-025-10135-w</span></a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> <a href="https://arxiv.org/abs/2307.06232" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2307.06232</span></a></li>
 
