--- a/gamma/index.html
+++ b/gamma/index.html
@@ -369,7 +369,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading57">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse57" aria-expanded="false" aria-controls="collapse57">
-								<h5>TBA
+								<h5>Orbifolds: and introduction with applications to foliations
 								<br>
 								Francisco Caramello (Federal University of Santa Catarina) &#8213; 27/02/2025, 15:00</h5>
 							</button>
@@ -378,7 +378,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								"Manifolds are fantastic spaces. It’s a pity that there aren’t more of them." This quote, by A. Stacey, laconically introduces the broad context of this talk: that the differential geometer disappointingly often finds himself dealing with singularities and outside of his favorite category — the price to pay in exchange for the extraordinarily regular objects it has. Orbifolds, first defined by I. Satake, are among the simplest generalizations of manifolds that try to amend this situation, by relaxing the local models to be quotients of the Euclidean space by a finite group actions, and thus embrace mild singularities. They, as expected, appear naturally in many areas of mathematics when one takes quotients, for instance, as orbit or leaf spaces, and similarly in physics as configuration spaces. In this talk we will briefly introduce them via this classical, local charts approach and illustrate some of their applications to foliation theory.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C_UjXFEY040' target="_blank">Adam Maskalaniec --- Manifolds and supermanifolds as locally ringed spaces</a> -->
 							</div>
