--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>X. Rivas, N. Román-Roy and B. M. Zawora, "Symmetries and Noether's theorem for multicontact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2503.03463" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2503.03463</span></a></li>
+
 					<li class='mb-2'>J. de Lucas, X. Rivas and T. Sobczak, "Foundations on <em>k</em>-contact geometry". <em>Preprint.</em> <a href="https://arxiv.org/abs/2409.11001" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.11001</span></a></li>
 
 					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Practical Introduction to Action-Dependent Field Theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2409.08340" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.08340</span></a></li>
