--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
 					<li><a href="https://www.cunef.edu/en/gaset-rifa-jordi/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
+					<li><a href="https://rubenizquierdolopez.github.io/" target="_blank">Rubén Izquierdo-López</a></li>
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
 					<li>Julia Lange</li>
 					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
