--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "Marsden&ndash;Meyer&ndash;Weinstein reduction for <em>k</em>-contact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2505.05462" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.05462</span></a></li>
+					
 					<li class='mb-2'>X. Rivas, N. Román-Roy and B. M. Zawora, "Symmetries and Noether's theorem for multicontact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2503.03463" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2503.03463</span></a></li>
 
 					<li class='mb-2'>J. de Lucas, X. Rivas and T. Sobczak, "Foundations on <em>k</em>-contact geometry". <em>Preprint.</em> <a href="https://arxiv.org/abs/2409.11001" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.11001</span></a></li>
 
-					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Practical Introduction to Action-Dependent Field Theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2409.08340" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.08340</span></a></li>
+					<li class='mb-2'>M. de León, J. Gaset, M. C. Muñoz-Lecanda, X. Rivas and N. Román-Roy, "Practical Introduction to Action-Dependent Field Theories". <em>Fortschr. Phys.</em> <strong>73</strong>(5):1-25, 2025. <a href="https://arxiv.org/abs/2409.08340" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2409.08340</span></a> <a href="https://doi.org/10.1002/prop.70000" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1002/prop.70000</span></a></li>
 
 					<li class='mb-2'>J. de Lucas, J. Lange and X. Rivas, "A symplectic approach to Schrödinger equations in the infinite-dimensional unbounded setting". <em>AIMS Math.</em> <strong>9</strong>(10)27998-28043, 2024. <a href="https://arxiv.org/abs/2312.09192" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2312.09192</span></a> <a href="https://doi.org/10.3934/math.20241359" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.3934/math.20241359</span></a></li>
 
