--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>M. de León, R. Izquierdo-López and X. Rivas, "Brackets in multicontact geometry and multisymplectization". <em>Preprint.</em> <a href="https://arxiv.org/abs/2505.13224" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.13224</span></a></li>
+					
 					<li class='mb-2'>J. de Lucas, X. Rivas, S. Vilariño and B. M. Zawora, "Marsden&ndash;Meyer&ndash;Weinstein reduction for <em>k</em>-contact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2505.05462" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.05462</span></a></li>
 					
 					<li class='mb-2'>X. Rivas, N. Román-Roy and B. M. Zawora, "Symmetries and Noether's theorem for multicontact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2503.03463" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2503.03463</span></a></li>
