--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
 		<div class="container mt-4">
 			<div class='row'>
-				<div class="col-3">
+				<div class="col-4">
 					
-					<img src="./img/bor.jpg" class="img-thumbnail rounded" alt="xavi">
+					<img src="./img/dolomiti.jpeg" class="img-thumbnail rounded" alt="xavi">
 
 				</div>
-				<div class="col-9">
+				<div class="col-8">
 					
 					<h1 class="h1 blue name">Xavier Rivas</h1>
 					<p class='lead'>Departament d'Enginyeria Informàtica i Matemàtiques, Universitat Rovira i Virgili, Tarragona</p>
@@ -102,7 +102,7 @@
 
 					<li class='mb-2'>L. Colombo, J. de Lucas, X. Rivas and B. M. Zawora, "An energy-momentum method for ordinary differential equations with an underlying <em>k</em>-polysymplectic manifold". <em>J. Nonlinear Sci.</em> <strong>35</strong>(42):1-54, 2025. <a href="https://arxiv.org/abs/2311.15035" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2311.15035</span></a> <a href="https://doi.org/10.1007/s00332-025-10135-w" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s00332-025-10135-w</span></a> <a href="./papers/20_energy-momentum-k-symplectic.pdf" target="_blank"><i class="bi bi-file-earmark-pdf-fill" style="color:red; font-size: 1.2rem;"></i></a></li>
 
-					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>Preprint.</em> <a href="https://arxiv.org/abs/2307.06232" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2307.06232</span></a></li>
+					<li class='mb-2'>J. de Lucas, X. Rivas and M. Zając, "Hamiltonian stochastic Lie systems and applications". <em>J. Phys. A: Math. Theor.</em>, 2025. <a href="https://arxiv.org/abs/2307.06232" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2307.06232</span></a> <a href="https://doi.org/10.1088/1751-8121/ae0bcd" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1088/1751-8121/ae0bcd</span></a></li>
 
 					<li class='mb-2'>X. Gràcia, J. de Lucas, X. Rivas and N. Román-Roy, "On Darboux theorems for geometric structures induced by closed forms". <em>Rev. Real Acad. Cienc. Exactas Fis. Nat. - A: Mat.</em> <strong>181</strong>:131, 2024. <a href="https://arxiv.org/abs/2306.08556" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2306.08556</span></a> <a href="https://doi.org/10.1007/s13398-024-01632-w" target="_blank"><span class="badge text-bg-secondary rounded-pill">doi: 10.1007/s13398-024-01632-w</span></a> <a href="./papers/17_RACSAM_Darboux.pdf" target="_blank"><i class="bi bi-file-earmark-pdf-fill" style="color:red; font-size: 1.2rem;"></i></a></li>
 
@@ -147,6 +147,7 @@
 					<li><a href="https://sites.google.com/view/leonardojcolombo/home" target="_blank">Leonardo Colombo</a></li>
 					<li><a href="https://www.icmat.es/mdeleon" target="_blank">Manuel de León</a></li>
 					<li><a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a></li>
+					<li><a href="https://www.cunef.edu/en/faculty-and-research/fernandez-saiz-eduardo/" target="_blank">Eduardo Fernández-Saiz</a></li>
 					<li><a href="https://www.cunef.edu/en/gaset-rifa-jordi/" target="_blank">Jordi Gaset</a></li>
 					<li><a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia</a></li>
 					<li><a href="https://rubenizquierdolopez.github.io/" target="_blank">Rubén Izquierdo-López</a></li>
