--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='mb-2'>X. Rivas, N. Román-Roy and A. villanova, "Skinner&ndash;Rusk formalism of action-dependent multicontact field theories". <em>Preprint.</em> <a href="https://arxiv.org/abs/2511.01499" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.01499</span></a></li>
+
 					<li class='mb-2'>J. Gaset, X. Rivas and N. Román-Roy, "A survey on geometric frameworks for action-dependent classical field theories and their relationship". <em>Preprint.</em> <a href="https://arxiv.org/abs/2506.11646" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2506.11646</span></a></li>
 
 					<li class='mb-2'>M. de León, R. Izquierdo-López and X. Rivas, "Brackets in multicontact geometry and multisymplectization". <em>Preprint.</em> <a href="https://arxiv.org/abs/2505.13224" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2505.13224</span></a></li>
@@ -162,6 +164,7 @@
 					<li>Silvia Souto</li>
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
+					<li><a href="https://www.unir.net/profesores/annamaria-villanova/" target="_blank">Anna Villanova</a></li>
 					<li>Marcin Zając</li>
 					<li><a href="https://bmzawora.github.io/" target="_blank">Bartosz M. Zawora</a></li>
 				</ul>
