--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
-					<li class='my-3'>X. Rivas, N. Román-Roy and A. villanova, <br>"Skinner&ndash;Rusk formalism of action-dependent multicontact field theories".<br>
+					<li class='my-3'>X. Rivas, N. Román-Roy and A. Villanova, <br>"Skinner&ndash;Rusk formalism of action-dependent multicontact field theories".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.01499" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.01499</span></a></li>
 
 					<li class='my-3'>J. Gaset, X. Rivas and N. Román-Roy, <br>"A survey on geometric frameworks for action-dependent classical field theories and their relationship".<br>
