--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 				<h5>List of publications:</h5>
 				<ol reversed class="ms-4">
 
+					<li class='my-3'>X. Gràcia, A. Martínez-Muñoz, X. Rivas and N. Román-Roy, <br>"The evolution operator connecting the Lagrangian and Hamiltonian formalisms for contact systems".<br>
+					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.13401" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.13401</span></a></li>
+
 					<li class='my-3'>X. Rivas, N. Román-Roy and A. Villanova, <br>"Skinner&ndash;Rusk formalism of action-dependent multicontact field theories".<br>
 					<em>Preprint.</em> <a href="https://arxiv.org/abs/2511.01499" target="_blank"><span class="badge arxiv-badge rounded-pill">arXiv: 2511.01499</span></a></li>
 
@@ -184,6 +187,7 @@
 					<li><a href="http://mlainz.gitlab.io/" target="_blank">Manuel Lainz</a></li>
 					<li>Julia Lange</li>
 					<li><a href="https://alopezgordon.xyz/" target="_blank">Asier López-Gordón</a></li>
+					<li>Ángel Martínez-Muñoz</li>
 					<li>Arnau Mas</li>
 					<li>Miguel C. Muñoz-Lecanda</li>
 					<li><a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a></li>
