--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			<div class="row">
 				<h2 class="blue">&#9632; Research</h2>
 
-				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I am part of the <a href="https://geomap.upc.edu/en">GEOMVAP</a> group. We collaborate with other groups, in particular with those in the <a href="http://gmcnet.webs.ull.es/">Geometry, Mechanics and Control Network</a>.</p>
+				<p>I develop my research in differential geometry and its applications to mathematical physics, mechanics and field theory. I collaborate with many groups in the <a href="http://gmcnet.webs.ull.es/">Geometry, Mechanics and Control Network</a>.</p>
 
-				<p>My PhD advisors were <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf" target="_blank">here</a>.</p>
+				<p>My PhD advisors were Professors <a href="https://web.mat.upc.edu/narciso.roman/" target="_blank">Narciso Román-Roy</a> and <a href="https://web.mat.upc.edu/xavier.gracia/" target="_blank">Xavier Gràcia Sabaté</a>. You can find my thesis <a href = "docs/PhD.pdf" target="_blank">here</a>.</p>
 
 				<p>I co-organize a weekly online seminar in collaboration with Professor <a href="https://www.fuw.edu.pl/~delucas/" target="_blank">Javier de Lucas</a>, aimed at discussing basic and advanced research topics on Differential Geometry and Applications to Physics. For more details, visit <a href="https://www.fuw.edu.pl/KMMF/gamma/">Geometry and Applications: Modern Mathematical Approaches (Gamma)</a>.</p>
 
